11519 - fixed checkbox alignment

--- a/src/_scss/components/checkbox/_accordionCheckbox.scss
+++ b/src/_scss/components/checkbox/_accordionCheckbox.scss
@@ -73,7 +73,7 @@
         width: rem(12);
         height: rem(12);
         min-width: rem(12);
-        margin: 0 0 rem(3) rem(6);
+        margin: 0 0 rem(4) rem(6);
         vertical-align: middle;
         border: solid rem(1) $gray-cool-20;
 
